// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly 1`] = `
<div
  className="card card-default"
/>
`;

exports[`renders correctly with type "default" 1`] = `
<div
  className="card card-default"
/>
`;

exports[`renders correctly with type "accent" 1`] = `
<div
  className="card card-accent"
/>
`;


